Bug 1342142 Part 1 Toolkit test cleanups r=mossop
Fixed various issues related to webextension install prompts in tests:
- Some existing tests install extensions from the about:addons search
  page, but when about:addons is run in its own top level window, these
  tests fail since there is no location bar to anchor notifications to.
  Given the mostly unsupported nature of running about:addons in its
  own top level window, this patch just takes the easy way out and skips
  running those tests in window mode.
- Fix tests that might generate prompts to acknowledge them if they
  are enabled.
- Update the test for mozAddonManager.permissionPromptsEnabled to properly
  handle the case where prompts are on by default.

MozReview-Commit-ID: AdPmhGfB33o

UltraBlame original commit: fa49f7a3e67dc2d6f0a5163825b71b582b822b3b

--- a/toolkit/mozapps/extensions/test/browser/browser.ini
+++ b/toolkit/mozapps/extensions/test/browser/browser.ini
@@ -265,6 +265,26 @@ browser_checkAddonCompatibility
 js
 ]
 [
+browser_discovery_install
+.
+js
+]
+[
+browser_eula
+.
+js
+]
+skip
+-
+if
+=
+buildapp
+=
+=
+'
+mulet
+'
+[
 browser_getmorethemes
 .
 js
@@ -293,6 +313,11 @@ if
 =
 require_signing
 [
+browser_install
+.
+js
+]
+[
 browser_installssl
 .
 js
@@ -303,7 +328,7 @@ browser_newaddon
 js
 ]
 [
-browser_updatessl
+browser_searching
 .
 js
 ]
@@ -318,12 +343,12 @@ browser_task_next_test
 js
 ]
 [
-browser_discovery_install
+browser_update
 .
 js
 ]
 [
-browser_update
+browser_updatessl
 .
 js
 ]
