Bug 1347483 - blessings package should not be downloaded during mach virtualenv setup; r=mshal
This fixes a regression introduced in Bug 1335873, which changes the mozbase
packages.txt to call mozlog's setup.py. Calling setup.py registers the
pytest_mozlog plugin for marionette-harness tests.

Instead, we can register the pytest-mozlog plugin via command-line arguments
to pytest, which are set in pytest.ini for the marionette-harness tests.
As a result, we can revert the mozbase packages.txt to not refer to mozlog's
setup.py

I'm leaving the pytest entry-point in mozlog's setup.py so that external
consumers don't have to register the pytest_mozlog plugin manually.

MozReview-Commit-ID: I5wNq5H1x3X

UltraBlame original commit: 0cf4ce9588caa74a82f63374d8cc5e198434d351

--- a/taskcluster/ci/source-test/python-tests.yml
+++ b/taskcluster/ci/source-test/python-tests.yml
@@ -264,10 +264,30 @@ mozlog
 /
 mozlog
 /
-pytest_mozlog
+*
+*
+'
+-
+'
+testing
 /
-*
-*
+mozbase
+/
+mozlog
+/
+setup
+.
+py
+'
+-
+'
+testing
+/
+mozbase
+/
+packages
+.
+txt
 '
 -
 '
