Bug 1333003 part 2 - Enable ASan builds and tests on Windows x64. r=dustin
MozReview-Commit-ID: GEYKhhuTNRD

UltraBlame original commit: 911cc14899c8f7d73bcca87c464f2fb04bcd5812

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -888,6 +888,31 @@ windows
 gpu
 -
 tests
+windows10
+-
+64
+-
+asan
+/
+opt
+:
+build
+-
+platform
+:
+win64
+-
+asan
+/
+opt
+test
+-
+sets
+:
+-
+common
+-
+tests
 #
 #
 #
