Bug 1333003 part 4 - Package the binary of llvm-symbolizer also on Windows. r=ted
MozReview-Commit-ID: 4nhVgQTJ7Bz

UltraBlame original commit: d88370d20b83b5118afbcf8fce2b9ee24e05b8f5

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -4794,6 +4794,12 @@ defined
 (
 CLANG_CXX
 )
+|
+|
+defined
+(
+CLANG_CL
+)
 #
 if
 defined
@@ -4811,6 +4817,7 @@ BINPATH
 llvm
 -
 symbolizer
+BIN_SUFFIX
 #
 endif
 #
