--- a/ipc/ipdl/sync-messages.ini
+++ b/ipc/ipdl/sync-messages.ini
@@ -1052,6 +1052,9 @@ State
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1060,6 +1063,9 @@ NativeState
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1068,6 +1074,9 @@ Name
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1076,6 +1085,9 @@ Value
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1084,6 +1096,9 @@ Help
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1092,6 +1107,9 @@ Description
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1100,6 +1118,9 @@ Attributes
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1108,6 +1129,9 @@ RelationByType
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1116,6 +1140,9 @@ Relations
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1124,6 +1151,9 @@ IsSearchbox
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1132,6 +1162,9 @@ LandmarkRole
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1140,6 +1173,9 @@ ARIARoleAtom
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1148,6 +1184,9 @@ GetLevelInternal
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1156,6 +1195,9 @@ CaretLineNumber
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1164,6 +1206,9 @@ CaretOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1172,6 +1217,9 @@ CharacterCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1180,6 +1228,9 @@ SelectionCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1188,6 +1239,9 @@ TextSubstring
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1196,6 +1250,9 @@ GetTextAfterOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1204,6 +1261,9 @@ GetTextAtOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1212,6 +1272,9 @@ GetTextBeforeOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1220,6 +1283,9 @@ CharAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1228,6 +1294,9 @@ TextAttributes
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1236,6 +1305,9 @@ DefaultTextAttributes
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1244,6 +1316,9 @@ TextBounds
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1252,6 +1327,9 @@ CharBounds
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1260,6 +1338,9 @@ OffsetAtPoint
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1268,6 +1349,9 @@ SelectionBoundsAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1276,6 +1360,9 @@ SetSelectionBoundsAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1284,6 +1371,9 @@ AddToSelection
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1292,6 +1382,9 @@ RemoveFromSelection
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1300,6 +1393,9 @@ Text
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1308,6 +1404,9 @@ ReplaceText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1316,6 +1415,9 @@ InsertText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1324,6 +1426,9 @@ CopyText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1332,6 +1437,9 @@ CutText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1340,6 +1448,9 @@ DeleteText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1348,6 +1459,9 @@ PasteText
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1356,6 +1470,9 @@ ImagePosition
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1364,6 +1481,9 @@ ImageSize
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1372,6 +1492,9 @@ StartOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1380,6 +1503,9 @@ EndOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1388,6 +1514,9 @@ IsLinkValid
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1396,6 +1525,9 @@ AnchorCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1404,6 +1536,9 @@ AnchorURIAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1412,6 +1547,9 @@ AnchorAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1420,6 +1558,9 @@ LinkCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1428,6 +1569,9 @@ LinkAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1436,6 +1580,9 @@ LinkIndexOf
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1444,6 +1591,9 @@ LinkIndexAtOffset
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1452,6 +1602,9 @@ TableOfACell
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1460,6 +1613,9 @@ ColIdx
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1468,6 +1624,9 @@ RowIdx
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1476,6 +1635,9 @@ GetPosition
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1484,6 +1646,9 @@ ColExtent
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1492,6 +1657,9 @@ RowExtent
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1500,6 +1668,9 @@ GetColRowExtents
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1508,6 +1679,9 @@ ColHeaderCells
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1516,6 +1690,9 @@ RowHeaderCells
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1524,6 +1701,9 @@ IsCellSelected
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1532,6 +1712,9 @@ TableCaption
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1540,6 +1723,9 @@ TableSummary
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1548,6 +1734,9 @@ TableColumnCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1556,6 +1745,9 @@ TableRowCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1564,6 +1756,9 @@ TableCellAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1572,6 +1767,9 @@ TableCellIndexAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1580,6 +1778,9 @@ TableColumnIndexAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1588,6 +1789,9 @@ TableRowIndexAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1596,6 +1800,9 @@ TableRowAndColumnIndicesAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1604,6 +1811,9 @@ TableColumnExtentAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1612,6 +1822,9 @@ TableRowExtentAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1620,6 +1833,9 @@ TableColumnDescription
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1628,6 +1844,9 @@ TableRowDescription
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1636,6 +1855,9 @@ TableColumnSelected
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1644,6 +1866,9 @@ TableRowSelected
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1652,6 +1877,9 @@ TableCellSelected
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1660,6 +1888,9 @@ TableSelectedCellCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1668,6 +1899,9 @@ TableSelectedColumnCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1676,6 +1910,9 @@ TableSelectedRowCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1684,6 +1921,9 @@ TableSelectedCells
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1692,6 +1932,9 @@ TableSelectedCellIndices
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1700,6 +1943,9 @@ TableSelectedColumnIndices
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1708,6 +1954,9 @@ TableSelectedRowIndices
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1716,6 +1965,9 @@ TableSelectColumn
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1724,6 +1976,9 @@ TableSelectRow
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1732,6 +1987,9 @@ TableUnselectColumn
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1740,6 +1998,9 @@ TableUnselectRow
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1748,6 +2009,9 @@ TableIsProbablyForLayout
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1756,6 +2020,9 @@ AtkTableColumnHeader
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1764,6 +2031,9 @@ AtkTableRowHeader
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1772,6 +2042,9 @@ SelectedItems
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1780,6 +2053,9 @@ SelectedItemCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1788,6 +2064,9 @@ GetSelectedItem
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1796,6 +2075,9 @@ IsItemSelected
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1804,6 +2086,9 @@ AddItemToSelection
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1812,6 +2097,9 @@ RemoveItemFromSelection
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1820,6 +2108,9 @@ SelectAll
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1828,6 +2119,9 @@ UnselectAll
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1836,6 +2130,9 @@ DoAction
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1844,6 +2141,9 @@ ActionCount
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1852,6 +2152,9 @@ ActionDescriptionAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1860,6 +2163,9 @@ ActionNameAt
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1868,6 +2174,9 @@ AccessKey
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1876,6 +2185,9 @@ KeyboardShortcut
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1884,6 +2196,9 @@ AtkKeyBinding
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1892,6 +2207,9 @@ CurValue
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1900,6 +2218,9 @@ SetCurValue
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1908,6 +2229,9 @@ MinValue
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1916,6 +2240,9 @@ MaxValue
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1924,6 +2251,9 @@ Step
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1932,6 +2262,9 @@ FocusedChild
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1940,6 +2273,9 @@ Language
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1948,6 +2284,9 @@ DocType
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1956,6 +2295,9 @@ Title
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1964,6 +2306,9 @@ URL
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1972,6 +2317,9 @@ MimeType
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1980,6 +2328,9 @@ URLDocTypeMimeType
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1988,6 +2339,9 @@ AccessibleAtPoint
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -1996,6 +2350,9 @@ Extents
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
@@ -2004,6 +2361,9 @@ DOMNodeID
 ]
 description
 =
+platform
+=
+notwin
 [
 PDocAccessible
 :
