--- a/mobile/android/base/AppConstants.java.in
+++ b/mobile/android/base/AppConstants.java.in
@@ -1974,4 +1974,27 @@ SCREENSHOTS_IN_BOOKMARKS_ENABLED
 =
 false
 ;
+public
+static
+final
+boolean
+MOZ_ANDROID_ACTIVITY_STREAM
+=
+/
+/
+#
+ifdef
+MOZ_ANDROID_ACTIVITY_STREAM
+true
+;
+/
+/
+#
+else
+false
+;
+/
+/
+#
+endif
 }
