Bug 1338871 - Enable Talos tests for linux64-stylo builds r=jmaher DONTBUILD
UltraBlame original commit: c309f93f5c33eaaff2294ef70ab18158d3fbb25d

--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -83,6 +83,26 @@ tc
 (
 Cpp
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 e10s
 :
 false
@@ -465,6 +485,13 @@ false
 #
 Bug
 1304435
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx64
 /
 debug
@@ -1128,6 +1155,26 @@ en
 -
 US
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 max
 -
 run
@@ -1155,6 +1202,24 @@ desktop1604
 test
 "
 }
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
@@ -1233,6 +1298,26 @@ en
 -
 US
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 max
 -
 run
@@ -1260,6 +1345,24 @@ desktop1604
 test
 "
 }
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
@@ -1468,6 +1571,26 @@ tc
 (
 Jit
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 e10s
 :
 false
@@ -1786,6 +1909,13 @@ android
 *
 :
 false
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx
 .
 *
@@ -2062,6 +2192,13 @@ android
 *
 :
 xlarge
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
 default
 :
 default
@@ -2122,6 +2259,13 @@ test
 -
 platform
 :
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx
 .
 *
@@ -2359,6 +2503,13 @@ test
 -
 platform
 :
+linux64
+-
+ccov
+/
+opt
+:
+false
 linux64
 -
 jsdcov
@@ -2612,6 +2763,26 @@ M
 (
 a11y
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -2860,6 +3031,13 @@ jsdcov
 opt
 :
 false
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx64
 /
 debug
@@ -3042,6 +3220,13 @@ platform
 linux64
 -
 jsdcov
+/
+opt
+:
+xlarge
+linux64
+-
+ccov
 /
 opt
 :
@@ -3292,6 +3477,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -3546,6 +3738,13 @@ macosx64
 debug
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -3846,6 +4045,13 @@ platform
 :
 linux64
 -
+ccov
+/
+opt
+:
+false
+linux64
+-
 jsdcov
 /
 opt
@@ -4076,6 +4282,26 @@ M
 (
 gpu
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -4152,6 +4378,13 @@ macosx64
 opt
 :
 both
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 true
@@ -4340,6 +4573,26 @@ M
 (
 JP
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 loopback
 -
 video
@@ -4554,6 +4807,13 @@ macosx64
 debug
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -4570,6 +4830,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -5029,6 +5296,13 @@ macosx
 *
 :
 true
+linux64
+-
+ccov
+/
+opt
+:
+false
 default
 :
 both
@@ -5070,6 +5344,13 @@ platform
 android
 .
 *
+:
+xlarge
+linux64
+-
+ccov
+/
+opt
 :
 xlarge
 default
@@ -5683,6 +5964,13 @@ test
 -
 platform
 :
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx
 .
 *
@@ -5860,6 +6148,26 @@ R
 (
 Ru
 )
+instance
+-
+size
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+xlarge
+default
+:
+default
 docker
 -
 image
@@ -5929,6 +6237,24 @@ macosx
 default
 :
 8
+e10s
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+ccov
+/
+opt
+:
+false
+default
+:
+both
 mozharness
 :
 script
@@ -6404,6 +6730,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -6538,6 +6872,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -6672,6 +7014,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -6813,6 +7163,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -6940,6 +7298,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -7074,6 +7440,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -7208,6 +7582,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -7342,6 +7724,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -7476,6 +7866,14 @@ stylo
 *
 :
 [
+'
+mozilla
+-
+central
+'
+'
+try
+'
 ]
 default
 :
@@ -7745,6 +8143,13 @@ test
 -
 platform
 :
+linux64
+-
+ccov
+/
+opt
+:
+false
 macosx
 .
 *
