Bug 1347758 - part5 : add tests. r=Ehsan
Add tests for non-in-tree media element, web-audio and plug-in.

MozReview-Commit-ID: 2BMzUHPjKWX

UltraBlame original commit: 2abce19f5001f97ff7df214cb2a92b6d81ffa0be

--- a/toolkit/content/tests/browser/browser.ini
+++ b/toolkit/content/tests/browser/browser.ini
@@ -41,6 +41,12 @@ html
 file_silentAudioTrack
 .
 html
+file_webAudio
+.
+html
+file_plugIn
+.
+html
 audio
 .
 ogg
@@ -93,6 +99,14 @@ tags
 =
 audiochannel
 [
+browser_block_notInTreeAudio
+.
+js
+]
+tags
+=
+audiochannel
+[
 browser_block_playMediaInMuteTab
 .
 js
@@ -102,6 +116,22 @@ tags
 audiochannel
 [
 browser_block_autoplay_playAfterTabVisible
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_block_plugIn
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_block_webAudio
 .
 js
 ]
