Backed out 6 changesets (bug 1347758) for eslint failure
Backed out changeset 9becd55242c1 (bug 1347758)
Backed out changeset 2abce19f5001 (bug 1347758)
Backed out changeset 80232d4c85d5 (bug 1347758)
Backed out changeset 1fd084ec34d4 (bug 1347758)
Backed out changeset cafb3c12027b (bug 1347758)
Backed out changeset 85846edfe957 (bug 1347758)

UltraBlame original commit: e7dbc2e8b2f997b9371e0e026f2906b4fca09d94

--- a/toolkit/content/tests/browser/browser.ini
+++ b/toolkit/content/tests/browser/browser.ini
@@ -5,16 +5,13 @@ support
 -
 files
 =
-audio
+head
 .
-ogg
-empty
-.
-png
-file_blockMedia_shouldNotPlay
+js
+file_blockMedia_shouldPlay
 .
 html
-file_blockMedia_shouldPlay
+file_blockMedia_shouldNotPlay
 .
 html
 file_contentTitle
@@ -41,30 +38,12 @@ html
 file_nonAutoplayAudio
 .
 html
-file_plugIn
-.
-html
-file_redirect
-.
-html
-file_redirect_to
-.
-html
 file_silentAudioTrack
 .
 html
-file_webAudio
+audio
 .
-html
-head
-.
-js
-image
-.
-jpg
-image_page
-.
-html
+ogg
 silentAudioTrack
 .
 webm
@@ -98,23 +77,15 @@ tags
 =
 audiochannel
 [
+browser_block_silentAudioTrack_media
+.
+js
+]
+tags
+=
+audiochannel
+[
 browser_block_autoplay_media_pausedAfterPlay
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_block_autoplay_playAfterTabVisible
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_block_notInTreeAudio
 .
 js
 ]
@@ -130,39 +101,13 @@ tags
 =
 audiochannel
 [
-browser_block_plugIn
+browser_block_autoplay_playAfterTabVisible
 .
 js
 ]
 tags
 =
 audiochannel
-[
-browser_block_silentAudioTrack_media
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_block_webAudio
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_bug1170531
-.
-js
-]
-[
-browser_bug1198465
-.
-js
-]
 [
 browser_bug295977_autoscroll_overflow
 .
@@ -190,20 +135,10 @@ browser_bug982298
 js
 ]
 [
-browser_content_url_annotation
+browser_bug1198465
 .
 js
 ]
-skip
--
-if
-=
-!
-e10s
-|
-|
-!
-crashreporter
 [
 browser_contentTitle
 .
@@ -238,70 +173,24 @@ browser_findbar
 js
 ]
 [
-browser_isSynthetic
-.
-js
-]
-[
-browser_keyevents_during_autoscrolling
-.
-js
-]
-[
 browser_label_textlink
 .
 js
 ]
 [
-browser_mediaPlayback
+browser_isSynthetic
 .
 js
 ]
-tags
+support
+-
+files
 =
-audiochannel
-[
-browser_mediaPlayback_mute
+empty
 .
-js
-]
-tags
-=
-audiochannel
+png
 [
-browser_mediaPlayback_suspended
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_mediaPlayback_suspended_multipleAudio
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_mute
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_mute2
-.
-js
-]
-tags
-=
-audiochannel
-[
-browser_quickfind_editable
+browser_keyevents_during_autoscrolling
 .
 js
 ]
@@ -365,7 +254,100 @@ submit
 ;
 )
 [
+browser_content_url_annotation
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+|
+|
+!
+crashreporter
+support
+-
+files
+=
+file_redirect
+.
+html
+file_redirect_to
+.
+html
+[
+browser_bug1170531
+.
+js
+]
+[
+browser_mediaPlayback
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_mediaPlayback_mute
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_mediaPlayback_suspended
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_mediaPlayback_suspended_multipleAudio
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_mute
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_mute2
+.
+js
+]
+tags
+=
+audiochannel
+[
+browser_quickfind_editable
+.
+js
+]
+[
 browser_saveImageURL
 .
 js
 ]
+support
+-
+files
+=
+image
+.
+jpg
+image_page
+.
+html
