Bug 1345119 - Part 4: Test test_inspector_getOffsetParent for new actor methods. r=pbro
MozReview-Commit-ID: AqSOEdEZKIy

UltraBlame original commit: c67e5d94d6c3f8eeb431ff964c73471cb86016cf

--- a/devtools/server/tests/mochitest/chrome.ini
+++ b/devtools/server/tests/mochitest/chrome.ini
@@ -70,6 +70,9 @@ html
 inspector_getImageData
 .
 html
+inspector_getOffsetParent
+.
+html
 inspector
 -
 delay
@@ -365,6 +368,11 @@ html
 ]
 [
 test_inspector_getNodeFromActor
+.
+html
+]
+[
+test_inspector_getOffsetParent
 .
 html
 ]
