--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -4613,6 +4613,37 @@ desktop1604
 test
 "
 }
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+qr
+/
+.
+*
+:
+[
+'
+graphics
+'
+]
+default
+:
+[
+'
+all
+'
+]
 mozharness
 :
 by
