Bug 1197420 Part 1 Schema groundwork for optional permissions r=kmag
MozReview-Commit-ID: JIfPYjxjFfM

UltraBlame original commit: 6c4c29c0b05a0b3b1ca8a16fa276773b4c6bb1c4

--- a/toolkit/components/extensions/schemas/manifest.json
+++ b/toolkit/components/extensions/schemas/manifest.json
@@ -809,6 +809,37 @@ optional
 true
 }
 "
+optional_permissions
+"
+:
+{
+"
+type
+"
+:
+"
+array
+"
+"
+items
+"
+:
+{
+"
+ref
+"
+:
+"
+OptionalPermission
+"
+}
+"
+optional
+"
+:
+true
+}
+"
 web_accessible_resources
 "
 :
@@ -934,7 +965,7 @@ id
 "
 :
 "
-Permission
+OptionalPermission
 "
 "
 choices
@@ -955,9 +986,6 @@ enum
 :
 [
 "
-alarms
-"
-"
 clipboardRead
 "
 "
@@ -972,9 +1000,6 @@ idle
 "
 notifications
 "
-"
-storage
-"
 ]
 }
 {
@@ -985,6 +1010,51 @@ ref
 "
 MatchPattern
 "
+}
+]
+}
+{
+"
+id
+"
+:
+"
+Permission
+"
+"
+choices
+"
+:
+[
+{
+"
+ref
+"
+:
+"
+OptionalPermission
+"
+}
+{
+"
+type
+"
+:
+"
+string
+"
+"
+enum
+"
+:
+[
+"
+alarms
+"
+"
+storage
+"
+]
 }
 ]
 }
