Bug 1303838 - Switch to existing target tab when clicking links. r=smaug
Merge "DOMServiceWorkerFocusClient" & "DOMWebNotificationClicked"
to "DOMWindowFocus" event. Utilize the event to switch tab when
loading links to an existing target tab.

MozReview-Commit-ID: Hd1NkVkrJA1

UltraBlame original commit: d47b335bd9a59c4ca45889fa7ade925166c056f8

--- a/dom/base/test/browser.ini
+++ b/dom/base/test/browser.ini
@@ -23,6 +23,15 @@ sjs
 file_bug1011748_OK
 .
 sjs
+file_bug1303838
+.
+html
+file_bug1303838_target
+.
+html
+file_bug1303838_with_iframe
+.
+html
 file_messagemanager_unload
 .
 html
@@ -147,6 +156,11 @@ js
 ]
 [
 browser_timeout_throttling_with_audio_playback
+.
+js
+]
+[
+browser_bug1303838
 .
 js
 ]
