--- a/dom/workers/test/serviceworkers/browser.ini
+++ b/dom/workers/test/serviceworkers/browser.ini
@@ -21,9 +21,15 @@ download
 worker
 .
 js
+file_multie10s_update
+.
+html
 force_refresh_browser_worker
 .
 js
+server_multie10s_update
+.
+sjs
 [
 browser_force_refresh
 .
@@ -34,3 +40,13 @@ browser_download
 .
 js
 ]
+[
+browser_multie10s_update
+.
+js
+]
+run
+-
+if
+=
+e10s
