Bug 1350291, uplift NSPR_4_15_BETA, r=franziskus
UltraBlame original commit: ddc2134eb60392a934dd04677c3aa0d6782df981

--- a/nsprpub/configure.in
+++ b/nsprpub/configure.in
@@ -231,7 +231,7 @@ MOD_MAJOR_VERSION
 4
 MOD_MINOR_VERSION
 =
-14
+15
 MOD_PATCH_VERSION
 =
 0
@@ -5423,6 +5423,324 @@ dnl
 =
 =
 dnl
+Check
+for
+pragma
+diagnostic
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+AC_MSG_CHECKING
+(
+[
+for
+pragma
+diagnostic
+]
+)
+if
+test
+"
+GNU_CC
+"
+=
+"
+1
+"
+;
+then
+cat
+>
+dummy
+-
+hello
+.
+c
+<
+<
+EOF
+#
+ifdef
+_PR_HAS_PRAGMA_DIAGNOSTIC
+#
+pragma
+GCC
+diagnostic
+push
+#
+pragma
+GCC
+diagnostic
+ignored
+"
+-
+Wunused
+-
+but
+-
+set
+-
+variable
+"
+#
+endif
+int
+main
+(
+)
+{
+char
+*
+dummy
+=
+"
+"
+;
+return
+0
+;
+}
+EOF
+{
+CC
+}
+-
+Werror
+=
+unused
+-
+but
+-
+set
+-
+variable
+-
+S
+dummy
+-
+hello
+.
+c
+-
+o
+dummy
+-
+hello
+.
+s
+2
+>
+&
+5
+if
+test
+?
+!
+=
+0
+;
+then
+{
+CC
+}
+-
+Werror
+=
+unused
+-
+but
+-
+set
+-
+variable
+-
+D_PR_HAS_PRAGMA_DIAGNOSTIC
+-
+S
+dummy
+-
+hello
+.
+c
+-
+o
+dummy
+-
+hello
+.
+s
+2
+>
+&
+5
+if
+test
+?
+=
+0
+;
+then
+CFLAGS
+=
+"
+CFLAGS
+-
+D_PR_HAS_PRAGMA_DIAGNOSTIC
+=
+1
+"
+_res
+=
+yes
+else
+_res
+=
+no
+fi
+else
+_res
+=
+no
+fi
+rm
+-
+f
+dummy
+-
+hello
+.
+c
+dummy
+-
+hello
+.
+s
+AC_MSG_RESULT
+(
+[
+_res
+]
+)
+else
+AC_MSG_RESULT
+(
+[
+no
+]
+)
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 Profile
 guided
 optimization
@@ -10008,6 +10326,10 @@ AC_DEFINE
 (
 HAVE_SOCKLEN_T
 )
+AC_DEFINE
+(
+HAVE_POINTER_LOCALTIME_R
+)
 AS
 =
 '
@@ -12821,6 +13143,10 @@ _GNU_SOURCE
 AC_DEFINE
 (
 HAVE_FCNTL_FILE_LOCKING
+)
+AC_DEFINE
+(
+HAVE_POINTER_LOCALTIME_R
 )
 case
 "
