Bug 1350599 - disable hsts tests which depend on bugzilla.mozilla.org always being in the preload list, a=bustage
UltraBlame original commit: 2ecf610d3185de940cb7b4ed2c214dc9e2367cee

--- a/security/manager/ssl/tests/unit/xpcshell.ini
+++ b/security/manager/ssl/tests/unit/xpcshell.ini
@@ -683,6 +683,14 @@ test_sss_readstate
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+bug
+1350599
 [
 test_sss_readstate_child
 .
@@ -720,6 +728,14 @@ test_sss_readstate_empty
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+bug
+1350599
 [
 test_sss_readstate_garbage
 .
@@ -770,11 +786,27 @@ test_sts_preloadlist_perwindowpb
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+bug
+1350599
 [
 test_sts_preloadlist_selfdestruct
 .
 js
 ]
+skip
+-
+if
+=
+true
+#
+bug
+1350599
 [
 test_validity
 .
