Bug 1349348 - Sync shield-recipe-client from GitHub (ded0b7). rs=Gijs r=Gijs
MozReview-Commit-ID: 4lN7IEUjuBr

UltraBlame original commit: 705c76502231517ea3c065d17eb86a80a7e11279

--- a/browser/extensions/shield-recipe-client/test/browser/browser.ini
+++ b/browser/extensions/shield-recipe-client/test/browser/browser.ini
@@ -1,10 +1,18 @@
 [
+DEFAULT
+]
+head
+=
+head
+.
+js
+[
 browser_NormandyDriver
 .
 js
 ]
 [
-browser_EnvExpressions
+browser_FilterExpressions
 .
 js
 ]
@@ -24,24 +32,17 @@ browser_Heartbeat
 js
 ]
 [
-browser_NormandyApi
-.
-js
-]
-support
--
-files
-=
-test_server
-.
-sjs
-[
 browser_RecipeRunner
 .
 js
 ]
 [
 browser_LogManager
+.
+js
+]
+[
+browser_ClientEnvironment
 .
 js
 ]
