--- a/browser/extensions/shield-recipe-client/test/unit/xpcshell.ini
+++ b/browser/extensions/shield-recipe-client/test/unit/xpcshell.ini
@@ -6,6 +6,22 @@ head
 xpc_head
 .
 js
+support
+-
+files
+=
+mock_api
+/
+*
+*
+test_server
+.
+sjs
+[
+test_NormandyApi
+.
+js
+]
 [
 test_Sampling
 .
