bug 1350045 - add warning to decision docker image line. r=philor
UltraBlame original commit: 6088c6885dd9e8f4d226654074d14af21ee39e5f

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -693,6 +693,24 @@ hard
 code
 the
 hash
+#
+XXX
+Changing
+this
+will
+break
+Chain
+of
+Trust
+without
+an
+associated
+puppet
+and
+#
+scriptworker
+patch
+!
 image
 :
 '
