Bug 1096013 - Add a test that ensures that we don't lose the favicon for background tabs that crash. r=mikedeboer
MozReview-Commit-ID: BoF62uPSfUC

UltraBlame original commit: 32f2f1e79d9fafc962f78fa85aae884fa561fd25

--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -1326,3 +1326,22 @@ browser_duplicate_history
 .
 js
 ]
+[
+browser_tabicon_after_bg_tab_crash
+.
+js
+]
+skip
+-
+if
+=
+!
+e10s
+#
+Tabs
+can
+'
+t
+crash
+without
+e10s
