Bug 1328868 - Part 4 - Add a new switch offering to honour the system font size to Fennec's preferences. r=sebastian
MozReview-Commit-ID: HZqxl6T90mZ

UltraBlame original commit: 505a6c976a0bdfe4bf0bb06fd494812eafd90032

--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -3308,6 +3308,36 @@ string
 name
 =
 "
+pref_use_system_font_size
+"
+>
+&
+pref_use_system_font_size
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
+pref_use_system_font_size_summary
+"
+>
+&
+pref_use_system_font_size_summary
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 pref_media_autoplay_enabled
 "
 >
