servo: Merge #16137 - Replace use of rustc_serialize::base64 by base64 (from nox:die-rustc-serialize-die); r=emilio
Source-Repo: https://github.com/servo/servo
Source-Revision: d992442dc6bb0b0c006b516c36ef4c6664e6b74c

UltraBlame original commit: e2be4a6b2e00e7d1324197b71315316feb752e1a

--- a/servo/components/net/Cargo.toml
+++ b/servo/components/net/Cargo.toml
@@ -55,6 +55,15 @@ rs
 [
 dependencies
 ]
+base64
+=
+"
+0
+.
+4
+.
+1
+"
 brotli
 =
 "
@@ -216,15 +225,6 @@ path
 profile_traits
 "
 }
-rustc
--
-serialize
-=
-"
-0
-.
-3
-"
 serde
 =
 "
