--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -200,6 +200,15 @@ atomic_refcell
 .
 1
 "
+base64
+=
+"
+0
+.
+4
+.
+1
+"
 bitflags
 =
 "
@@ -620,15 +629,6 @@ regex
 0
 .
 2
-"
-rustc
--
-serialize
-=
-"
-0
-.
-3
 "
 script_layout_interface
 =
