Bug 1343341. Add a test to check that discarding and redecoding of animated images works. r=aosmond
The test does nothing if the animated images discarding pref isn't enabled.

UltraBlame original commit: e91d83339d9772de459669e8b448427e260be365

--- a/image/test/mochitest/mochitest.ini
+++ b/image/test/mochitest/mochitest.ini
@@ -248,6 +248,11 @@ html
 imgutils
 .
 js
+infinite
+-
+apng
+.
+png
 invalid
 .
 jpg
@@ -640,6 +645,11 @@ os
 '
 android
 '
+[
+test_discardAnimatedImage
+.
+html
+]
 [
 test_drawDiscardedImage
 .
