Bug 1278042 - If update is disabled, don't copy LaunchServices. r=spohl
MozReview-Commit-ID: DWZxmVU0Qrf

UltraBlame original commit: 87e9ff6e13c555301273f48731321be2850f0600

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -266,6 +266,9 @@ Contents
 Info
 .
 plist
+#
+ifdef
+MOZ_UPDATER
 APPNAME
 /
 Contents
@@ -273,6 +276,8 @@ Contents
 Library
 /
 LaunchServices
+#
+endif
 APPNAME
 /
 Contents
