--- a/browser/app/Makefile.in
+++ b/browser/app/Makefile.in
@@ -999,6 +999,8 @@ Contents
 Library
 /
 LaunchServices
+ifdef
+MOZ_UPDATER
 mv
 -
 f
@@ -1077,6 +1079,7 @@ org
 mozilla
 .
 updater
+endif
 printf
 APPLMOZB
 >
