Bug 1265818 - Part 4 - Test that scroll positions for previous session history entries are restored on Desktop. r=mikedeboer
This extends the existing the existing scroll position test by navigating to a second page and then checking that after closing and restoring that tab, the scroll position is restored not only for the current history entry, but after going back as well.

MozReview-Commit-ID: Ddig1Mfo5rz

UltraBlame original commit: f90ffc4641967d325839dc183c161c0884873028

--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -184,6 +184,9 @@ sjs
 browser_scrollPositions_sample
 .
 html
+browser_scrollPositions_sample2
+.
+html
 browser_scrollPositions_sample_frameset
 .
 html
