Bug 1351012: replace b2gtest with gecko-t-linux-xlarge; r=garndt
b2gtest uses *.xlarge instances, so it seems a reasonable substitution.

MozReview-Commit-ID: Ev6tnNpx13c

UltraBlame original commit: 60377a780a5d5744cdeec15b04420bf2168586e7

--- a/taskcluster/ci/source-test/mozlint.yml
+++ b/taskcluster/ci/source-test/mozlint.yml
@@ -33,7 +33,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 implementation
@@ -345,7 +351,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 implementation
@@ -476,7 +488,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 implementation
