--- a/taskcluster/ci/source-test/python-tests.yml
+++ b/taskcluster/ci/source-test/python-tests.yml
@@ -38,7 +38,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 implementation
@@ -175,7 +181,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 by
@@ -344,7 +356,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 by
@@ -471,7 +489,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 implementation
@@ -628,7 +652,13 @@ provisioner
 -
 v1
 /
-b2gtest
+gecko
+-
+t
+-
+linux
+-
+xlarge
 worker
 :
 by
