Bug 1348390 - Disable new XHR wpt for instability, r=jmaher
UltraBlame original commit: 854b5f25ff6732613c1b51ed5833654bd1b5dc69

--- a/testing/web-platform/meta/XMLHttpRequest/getallresponseheaders.htm.ini
+++ b/testing/web-platform/meta/XMLHttpRequest/getallresponseheaders.htm.ini
@@ -6,14 +6,22 @@ htm
 type
 :
 testharness
-[
-XMLHttpRequest
+disabled
 :
-getAllResponseHeaders
-(
-)
-1
-]
-expected
+https
 :
-FAIL
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1348390
