--- a/old-configure.in
+++ b/old-configure.in
@@ -47553,9 +47553,48 @@ RELEASE_OR_BETA
 "
 ;
 then
+dnl
+Disable
+ICU
+on
+android
+/
+x86
+for
+testing
+on
+tier
+-
+1
+platform
+if
+test
+"
+MOZ_WIDGET_TOOLKIT
+"
+=
+"
+android
+"
+-
+a
+"
+CPU_ARCH
+"
+=
+"
+x86
+"
+;
+then
+_INTL_API
+=
+no
+else
 _INTL_API
 =
 yes
+fi
 else
 _INTL_API
 =
