Bug 1349307 - disable browser_all_files_referenced.js on linux32 where it causes oom crashes, rs=Gijs.
UltraBlame original commit: 11bc569ff6ad2e5984c60d1d0d2933b2e36bb2df

--- a/browser/base/content/test/static/browser.ini
+++ b/browser/base/content/test/static/browser.ini
@@ -18,6 +18,22 @@ skip
 if
 =
 debug
+|
+|
+(
+os
+=
+=
+'
+linux
+'
+&
+&
+bits
+=
+=
+32
+)
 #
 no
 point
@@ -35,6 +51,15 @@ intermittently
 timeout
 on
 debug
+;
+oom
+crashes
+on
+linux32
+(
+bug
+1349307
+)
 [
 browser_misused_characters_in_strings
 .
