--- a/layout/style/test/mochitest.ini
+++ b/layout/style/test/mochitest.ini
@@ -332,6 +332,18 @@ file_animations_playbackrate
 .
 html
 [
+test_animations_reverse
+.
+html
+]
+support
+-
+files
+=
+file_animations_reverse
+.
+html
+[
 test_animations_styles_on_event
 .
 html
