--- a/mobile/android/base/strings.xml.in
+++ b/mobile/android/base/strings.xml.in
@@ -2963,6 +2963,21 @@ string
 name
 =
 "
+custom_tabs_hint_url_copy
+"
+>
+&
+custom_tabs_hint_url_copy
+;
+<
+/
+string
+>
+<
+string
+name
+=
+"
 pref_activity_stream
 "
 >
