Bug 1717676 - Unblock McAfee DLP > 11.6.300.2 r=tkikuchi
Differential Revision: https://phabricator.services.mozilla.com/D118515

UltraBlame original commit: 903759bc3b004025f16659abee720c4283239cf8

--- a/mozglue/dllservices/WindowsDllBlocklistDefs.in
+++ b/mozglue/dllservices/WindowsDllBlocklistDefs.in
@@ -2177,6 +2177,8 @@ signatures
 #
 bug
 1634090
+bug
+1717676
 DllBlocklistEntry
 (
 "
@@ -2187,8 +2189,8 @@ dll
 (
 11
 6
-0xffff
-0xffff
+300
+2
 )
 )
 DllBlocklistEntry
@@ -2201,8 +2203,8 @@ dll
 (
 11
 6
-0xffff
-0xffff
+300
+2
 )
 )
 #
