Bug 1720625 - Use a sysroot for the host part of the build on CI. r=firefox-build-system-reviewers,andi
Followup for bug 1719229 ; some builds have not been tweaked to use the
x86_64-linux-gnu sysroot.

In a few cases, this also use a sysroot for the target part when that
wasn't already the case.

Differential Revision: https://phabricator.services.mozilla.com/D119957

UltraBlame original commit: c32833238bcb607898e6db52ff584ecbb8badc28

--- a/taskcluster/ci/instrumented-build/kind.yml
+++ b/taskcluster/ci/instrumented-build/kind.yml
@@ -673,6 +673,14 @@ sdk
 .
 12
 -
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
+-
 wasi
 -
 sysroot
@@ -1006,6 +1014,14 @@ nasm
 linux64
 -
 node
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 win32
 -
 shippable
@@ -1236,6 +1252,14 @@ liblowercase
 linux64
 -
 winchecksec
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 fetch
 :
 -
@@ -1484,6 +1508,14 @@ liblowercase
 linux64
 -
 winchecksec
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 fetch
 :
 -
