--- a/taskcluster/ci/searchfox/kind.yml
+++ b/taskcluster/ci/searchfox/kind.yml
@@ -522,6 +522,14 @@ sdk
 .
 12
 -
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
+-
 wasi
 -
 sysroot
@@ -801,6 +809,14 @@ liblowercase
 linux64
 -
 winchecksec
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 fetch
 :
 -
@@ -1064,3 +1080,11 @@ nasm
 linux64
 -
 node
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
