--- a/taskcluster/ci/source-test/clang.yml
+++ b/taskcluster/ci/source-test/clang.yml
@@ -779,6 +779,14 @@ external
 linux64
 -
 rust
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 worker
 :
 artifacts
@@ -933,6 +941,14 @@ tidy
 linux64
 -
 rust
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
 macosx64
 -
 non
@@ -1089,3 +1105,11 @@ sdk
 10
 .
 12
+-
+sysroot
+-
+x86_64
+-
+linux
+-
+gnu
