Bug 1715167 - Part 7: Add tests for precursor principals, r=ckerschb,ngogge
These test various ways of loading documents which will end up with null
principals, and verify that they are loaded with the expected precursor URI.

Depends on D119693

Differential Revision: https://phabricator.services.mozilla.com/D119694

UltraBlame original commit: 99863d6b8f8a7b10cbf558c97385d8a7c034c03d

--- a/caps/tests/unit/xpcshell.ini
+++ b/caps/tests/unit/xpcshell.ini
@@ -28,3 +28,23 @@ test_site_origin
 .
 js
 ]
+[
+test_precursor_principal
+.
+js
+]
+firefox
+-
+appdir
+=
+browser
+skip
+-
+if
+=
+toolkit
+=
+=
+'
+android
+'
