--- a/taskcluster/ci/test/misc.yml
+++ b/taskcluster/ci/test/misc.yml
@@ -201,7 +201,9 @@ py
 -
 android
 /
-androidx86_7_0
+android
+-
+x86_64
 .
 py
 extra
@@ -766,7 +768,9 @@ py
 -
 android
 /
-androidx86_7_0
+android
+-
+x86_64
 .
 py
 linux
@@ -1184,7 +1188,9 @@ py
 -
 android
 /
-androidx86_7_0
+android
+-
+x86_64
 .
 py
 linux
@@ -1377,7 +1383,9 @@ py
 -
 android
 /
-androidx86_7_0
+android
+-
+x86_64
 .
 py
 linux
@@ -1758,7 +1766,9 @@ py
 -
 android
 /
-androidx86_7_0
+android
+-
+x86_64
 .
 py
 linux
