--- a/taskcluster/ci/instrumented-build/kind.yml
+++ b/taskcluster/ci/instrumented-build/kind.yml
@@ -686,7 +686,7 @@ wasi
 sysroot
 android
 -
-arm
+x86
 -
 shippable
 /
@@ -699,7 +699,7 @@ Android
 4
 .
 0
-Arm
+x86
 PGO
 instrumented
 "
@@ -716,7 +716,7 @@ instrumented
 -
 android
 -
-arm
+x86
 shipping
 -
 product
@@ -732,7 +732,7 @@ android
 -
 0
 -
-armv7
+x86
 /
 pgo
 worker
@@ -946,7 +946,333 @@ variant
 -
 cfg
 :
-arm
+x86
+-
+profile
+-
+generate
+tooltool
+-
+downloads
+:
+internal
+fetches
+:
+toolchain
+:
+-
+android
+-
+gradle
+-
+dependencies
+-
+android
+-
+ndk
+-
+linux
+-
+android
+-
+sdk
+-
+linux
+-
+linux64
+-
+clang
+-
+android
+-
+cross
+-
+linux64
+-
+rust
+-
+android
+-
+linux64
+-
+rust
+-
+size
+-
+linux64
+-
+cbindgen
+-
+linux64
+-
+nasm
+-
+linux64
+-
+node
+android
+-
+x86_64
+-
+shippable
+/
+opt
+:
+description
+:
+"
+Android
+5
+.
+0
+x86_64
+PGO
+instrumented
+"
+index
+:
+product
+:
+mobile
+job
+-
+name
+:
+instrumented
+-
+android
+-
+x86_64
+shipping
+-
+product
+:
+fennec
+treeherder
+:
+platform
+:
+android
+-
+5
+-
+0
+-
+x86_64
+/
+pgo
+worker
+-
+type
+:
+b
+-
+linux
+worker
+:
+docker
+-
+image
+:
+{
+in
+-
+tree
+:
+android
+-
+build
+}
+env
+:
+GRADLE_USER_HOME
+:
+"
+/
+builds
+/
+worker
+/
+checkouts
+/
+gecko
+/
+mobile
+/
+android
+/
+gradle
+/
+dotgradle
+-
+offline
+"
+TOOLTOOL_MANIFEST
+:
+"
+mobile
+/
+android
+/
+config
+/
+tooltool
+-
+manifests
+/
+android
+/
+releng
+.
+manifest
+"
+artifacts
+:
+-
+name
+:
+public
+/
+build
+path
+:
+/
+builds
+/
+worker
+/
+artifacts
+/
+type
+:
+directory
+-
+name
+:
+public
+/
+build
+/
+geckoview
+-
+androidTest
+.
+apk
+path
+:
+/
+builds
+/
+worker
+/
+workspace
+/
+obj
+-
+build
+/
+gradle
+/
+build
+/
+mobile
+/
+android
+/
+geckoview
+/
+outputs
+/
+apk
+/
+androidTest
+/
+withGeckoBinaries
+/
+debug
+/
+geckoview
+-
+withGeckoBinaries
+-
+debug
+-
+androidTest
+.
+apk
+type
+:
+file
+-
+name
+:
+public
+/
+build
+/
+geckoview_example
+.
+apk
+path
+:
+/
+builds
+/
+worker
+/
+workspace
+/
+obj
+-
+build
+/
+gradle
+/
+build
+/
+mobile
+/
+android
+/
+geckoview_example
+/
+outputs
+/
+apk
+/
+withGeckoBinaries
+/
+debug
+/
+geckoview_example
+-
+withGeckoBinaries
+-
+debug
+.
+apk
+type
+:
+file
+run
+:
+config
+:
+-
+builds
+/
+releng_base_android_64_builds
+.
+py
+custom
+-
+build
+-
+variant
+-
+cfg
+:
+x86_64
 -
 profile
 -
