Bug 1718341 - Generate Android AVD in TL job instead of using tooltool r=aklotz,nalexander
Tooltool images are hard to update because we don't provide a script to
generate the image and documentation is often inaccurate.

This patch makes it so we generate the AVD in the android-sdk TL job instead.

Differential Revision: https://phabricator.services.mozilla.com/D119221

UltraBlame original commit: 3920b27acecb5c8987d8d5a624f45bf75e34320e

--- a/taskcluster/ci/generate-profile/kind.yml
+++ b/taskcluster/ci/generate-profile/kind.yml
@@ -704,6 +704,24 @@ android
 sdk
 -
 linux
+-
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
 android
 -
 x86_64
@@ -945,6 +963,24 @@ stackwalk
 android
 -
 sdk
+-
+linux
+-
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
 -
 linux
 win32
