--- a/taskcluster/ci/test/kind.yml
+++ b/taskcluster/ci/test/kind.yml
@@ -390,6 +390,24 @@ em
 -
 android
 -
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
+-
+android
+-
 emulator
 -
 linux
