--- a/taskcluster/ci/test/misc.yml
+++ b/taskcluster/ci/test/misc.yml
@@ -944,6 +944,24 @@ sdk
 -
 linux
 -
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
+-
 linux64
 -
 node
@@ -1560,6 +1578,24 @@ em
 android
 -
 sdk
+-
+linux
+-
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
 -
 linux
 -
