--- a/taskcluster/ci/webrender/kind.yml
+++ b/taskcluster/ci/webrender/kind.yml
@@ -1884,6 +1884,24 @@ sdk
 -
 linux
 -
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
+-
 linux64
 -
 rust
@@ -2202,6 +2220,24 @@ sdk
 -
 linux
 -
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
+-
 linux64
 -
 rust
@@ -2460,6 +2496,24 @@ toolchain
 android
 -
 sdk
+-
+linux
+-
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
 -
 linux
 run
@@ -2781,6 +2835,24 @@ toolchain
 android
 -
 sdk
+-
+linux
+-
+android
+-
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
 -
 linux
 run
