--- a/taskcluster/ci/test/xpcshell.yml
+++ b/taskcluster/ci/test/xpcshell.yml
@@ -728,6 +728,24 @@ em
 -
 android
 -
+system
+-
+image
+-
+x86_64
+-
+linux
+-
+android
+-
+avd
+-
+x86_64
+-
+linux
+-
+android
+-
 emulator
 -
 linux
