Bug 1718341 - Download Android AVD from TL job artifact. r=nalexander
Differential Revision: https://phabricator.services.mozilla.com/D119542

UltraBlame original commit: e5bd150a58b297c1c2242b2c24e7bf6dd46bfd6d

--- a/taskcluster/ci/toolchain/android.yml
+++ b/taskcluster/ci/toolchain/android.yml
@@ -89,6 +89,86 @@ run
 time
 :
 1800
+#
+In
+automation
+we
+generate
+the
+AVD
+using
+the
+linux64
+-
+android
+-
+avd
+jobs
+.
+On
+#
+developers
+'
+machines
+bootstrap
+will
+download
+the
+artifact
+from
+the
+avd
+job
+#
+instead
+of
+generating
+it
+.
+#
+#
+The
+Android
+AVD
+needs
+the
+corresponding
+system
+image
+generated
+in
+the
+#
+linux64
+-
+android
+-
+system
+-
+image
+TL
+job
+.
+System
+images
+are
+not
+redistributable
+#
+so
+locally
+bootstrap
+will
+use
+sdkmanager
+to
+download
+the
+corresponding
+system
+#
+images
+.
 linux64
 -
 android
@@ -99,6 +179,13 @@ x86_64
 -
 repack
 :
+attributes
+:
+local
+-
+toolchain
+:
+true
 description
 :
 "
@@ -123,38 +210,15 @@ x86_64
 -
 linux
 )
-worker
-:
-artifacts
-:
+run
 -
-name
-:
-project
-/
-gecko
-/
-android
+on
 -
-avd
-path
+projects
 :
-/
-builds
-/
-worker
-/
-project
-/
-gecko
-/
-android
--
-avd
-/
-type
-:
-directory
+[
+trunk
+]
 run
 :
 script
@@ -205,13 +269,9 @@ toolchain
 -
 artifact
 :
-project
+public
 /
-gecko
-/
-android
--
-avd
+build
 /
 android
 -
@@ -231,6 +291,130 @@ android
 avd
 -
 x86_64
+-
+linux
+linux64
+-
+android
+-
+avd
+-
+arm
+-
+repack
+:
+attributes
+:
+local
+-
+toolchain
+:
+true
+description
+:
+"
+Android
+AVD
+(
+Linux
+)
+repack
+toolchain
+build
+"
+treeherder
+:
+symbol
+:
+TL
+(
+avd
+-
+arm
+-
+linux
+)
+run
+-
+on
+-
+projects
+:
+[
+trunk
+]
+run
+:
+script
+:
+repack
+-
+android
+-
+avd
+-
+linux
+.
+sh
+arguments
+:
+-
+'
+python
+/
+mozboot
+/
+mozboot
+/
+android
+-
+avds
+/
+arm
+.
+json
+'
+resources
+:
+-
+'
+python
+/
+mozboot
+/
+*
+*
+/
+*
+android
+*
+'
+toolchain
+-
+artifact
+:
+public
+/
+build
+/
+android
+-
+avd
+-
+linux
+.
+tar
+.
+zst
+toolchain
+-
+alias
+:
+android
+-
+avd
+-
+arm
 -
 linux
 linux64
