Backed out 10 changesets (bug 1718341) for causing wrench bustages. CLOSED TREE
Backed out changeset e5bd150a58b2 (bug 1718341)
Backed out changeset e82e752b8f44 (bug 1718341)
Backed out changeset d9462c727c8f (bug 1718341)
Backed out changeset 2bd647754780 (bug 1718341)
Backed out changeset 31dfce45985f (bug 1718341)
Backed out changeset 03266cea345d (bug 1718341)
Backed out changeset 3920b27acecb (bug 1718341)
Backed out changeset 2b17603c5e65 (bug 1718341)
Backed out changeset ebc0d5d4f537 (bug 1718341)
Backed out changeset 1c8844157b8d (bug 1718341)

UltraBlame original commit: 1c2630a2b25409047650d06f56d9d3bd7b8702b3

--- a/taskcluster/ci/test/misc.yml
+++ b/taskcluster/ci/test/misc.yml
@@ -201,9 +201,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 extra
@@ -768,9 +766,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 linux
@@ -941,24 +937,6 @@ em
 android
 -
 sdk
--
-linux
--
-android
--
-system
--
-image
--
-x86_64
--
-linux
--
-android
--
-avd
--
-x86_64
 -
 linux
 -
@@ -1206,9 +1184,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 linux
@@ -1401,9 +1377,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 linux
@@ -1578,24 +1552,6 @@ em
 android
 -
 sdk
--
-linux
--
-android
--
-system
--
-image
--
-x86_64
--
-linux
--
-android
--
-avd
--
-x86_64
 -
 linux
 -
@@ -1802,9 +1758,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 linux
