--- a/taskcluster/ci/test/xpcshell.yml
+++ b/taskcluster/ci/test/xpcshell.yml
@@ -170,9 +170,7 @@ py
 -
 android
 /
-android
--
-x86_64
+androidx86_7_0
 .
 py
 linux
@@ -725,24 +723,6 @@ em
 .
 *
 :
--
-android
--
-system
--
-image
--
-x86_64
--
-linux
--
-android
--
-avd
--
-x86_64
--
-linux
 -
 android
 -
