Bug 1653549 - don't sent a location if document is hidden r=edgar
When the document is hidden from view, silently drop position updates on the floor. This aligns, more or less, with Chrome and Safari.

The situation with "not fully active" is a bit more quirky, because non-fully active documents are generally hidden (e.g., `remove()`ing and iframe).

Regardless, I think this gives us the desired behavior and covers the main privacy case: background tabs should not receive position updates.

Differential Revision: https://phabricator.services.mozilla.com/D109279

UltraBlame original commit: a6fc75e24e369aedafc96f13489d0e4a8aa8da52

--- a/dom/tests/mochitest/geolocation/mochitest.ini
+++ b/dom/tests/mochitest/geolocation/mochitest.ini
@@ -23,6 +23,9 @@ sjs
 windowTest
 .
 html
+popup
+.
+html
 prefs
 =
 dom
@@ -71,6 +74,25 @@ if
 xorigin
 #
 Hangs
+[
+test_hidden
+.
+html
+]
+skip
+-
+if
+=
+xorigin
+#
+Hangs
+support
+-
+files
+=
+popup
+.
+html
 [
 test_cachedPosition
 .
