--- a/toolkit/content/tests/browser/browser.ini
+++ b/toolkit/content/tests/browser/browser.ini
@@ -82,6 +82,11 @@ browser_autoscroll_disabled_on_editable_content
 js
 ]
 [
+browser_autoscroll_disabled_on_links
+.
+js
+]
+[
 browser_delay_autoplay_media
 .
 js
