Bug 1692984 - [marionette] Add support for “webSocketUrl” capability. r=webdriver-reviewers,jdescottes,jgraham
Differential Revision: https://phabricator.services.mozilla.com/D119730

UltraBlame original commit: fd61434c223f4cb98319a0918980eef240085d35

--- a/testing/web-platform/meta/webdriver/tests/bidi/new_session/connect.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/new_session/connect.py.ini
@@ -12,11 +12,17 @@ capabilities0
 ]
 expected
 :
+if
+release_or_beta
+:
 ERROR
 [
 test_bidi_session_send
 ]
 expected
+:
+if
+release_or_beta
 :
 ERROR
 [
@@ -27,5 +33,8 @@ capabilities0
 ]
 ]
 expected
+:
+if
+release_or_beta
 :
 ERROR
