Backed out changeset ff3b52062c5a (bug 1659266) for causing build bustages on WebIDLPrefs. CLOSED TREE
UltraBlame original commit: 4fb3a805c0a630e69bcca67c4324d638d3a0ec2d

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -43196,6 +43196,45 @@ for
 moz
 -
 prefixed
+multi
+-
+column
+properties
+(
+including
+column
+-
+gap
+)
+enabled
+?
+-
+name
+:
+layout
+.
+css
+.
+prefixes
+.
+columns
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+#
+Is
+support
+for
+-
+moz
+-
+prefixed
 font
 feature
 properties
