--- a/browser/components/customizableui/test/browser.ini
+++ b/browser/components/customizableui/test/browser.ini
@@ -929,6 +929,11 @@ browser_history_recently_closed
 js
 ]
 [
+browser_history_recently_closed_middleclick
+.
+js
+]
+[
 browser_history_restore_session
 .
 js
