--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -56312,6 +56312,39 @@ mirror
 :
 always
 #
+Whether
+to
+force
+failover
+to
+direct
+for
+system
+requests
+.
+#
+ifdef
+MOZ_PROXY_DIRECT_FAILOVER
+-
+name
+:
+network
+.
+proxy
+.
+failover_direct
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
+endif
+#
 Some
 requests
 during
