--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -35,7 +35,7 @@ version
 "
 24
 .
-3
+4
 .
 0
 "
@@ -709,6 +709,15 @@ publisher
 tags
 .
 js
+"
+"
+shims
+/
+google
+-
+safeframe
+.
+html
 "
 "
 shims
