Bug 1717893 - [devtools] Avoid blank inspector if iframe selector matches non-iframe element r=bomsy
Fix an edge case which can lead to an empty markup view after reload.

Differential Revision: https://phabricator.services.mozilla.com/D119983

UltraBlame original commit: 1901ae10c819ac95f07508aaebb03e1f624089ac

--- a/devtools/client/inspector/test/browser.ini
+++ b/devtools/client/inspector/test/browser.ini
@@ -1686,6 +1686,11 @@ browser_inspector_reload_iframe
 js
 ]
 [
+browser_inspector_reload_invalid_iframe
+.
+js
+]
+[
 browser_inspector_reload_missing
 -
 iframe
